# CNN4CMR

./: .gitignore  LICENSE  README.md  setup.cfg
Notebooks/: MakeMappingDataset.ipynb  Mapping.ipynb  Mapping_BoundingBox.ipynb  Mapping_Segmentation.ipynb  demo.ipynb
Notebooks/Mapping/: MakeMappingDataset.ipynb  Mapping_BoundingBox.ipynb  Mapping_Heatmap.ipynb  Mapping_Prediction.ipynb  Mapping_Segmentation.ipynb
Notebooks/Mapping/T1_Mapping/: BoundingBox.ipynb  Mapping_Heatmap.ipynb  Segmentation.ipynb
Notebooks/SAXCine/: MakeSAXCINEDataset.ipynb  SAXCINECS_Prediction.ipynb  SAXCINECS_Segmentation.ipynb
src/cnn4cmr/: evaluation.py
src/cnn4cmr/architectures/: __init__.py  fcn.py  resnet_v1.ipynb  unet.py
src/cnn4cmr/architectures/custom_layers/: __init__.py  unet_layers.py
src/cnn4cmr/architectures/custom_losses/: __init__.py  losses.py
src/cnn4cmr/data_loaders/: augmentations.py  segmentation_dl.py  utils.py
src/cnn4cmr/utils/: __init__.py  utils.py
tests/: test.py
