[metadata]
name = cnn4cmr
version = 0.0.1
author = Thomas Hadler
author_email = thomas.hadler@charite.de
description = customisable neural network architectures for medical imaging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thadler/cnn4cmr
project_urls =
    Bug Tracker = https://github.com/thadler/cnn4cmr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0-only
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pydicom
    numpy
    matplotlib>=3.6
    shapely>=2.0
    rasterio
    openpyxl
    torch>=2.0.1
    torchvision>=0.15.2
    torchaudio>=2.0.2
    torchinfo

[options.packages.find]
where = src